--- a/app/contact.html
+++ b/app/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="contact">
         <div class="container">
             <div class="header__inner">
                 <div class="header__top">
@@ -16,12 +16,12 @@
                     </a>
                     <ul class="header__top-menu">
                         <li class="header__top-item">
-                            <a class="header__top-link" href="#">
+                            <a class="header__top-link" href="index.html">
                                 About Us.                         
                             </a>
                         </li>
                         <li class="header__top-item">
-                            <span class="header__top-link header__top-link--active" href="#">
+                            <span class="header__top-link header__top-link--active" href="#" id="contact">
                                 Contact Us.
                             </span>
                         </li>
@@ -40,7 +40,7 @@
                         <input class="header__contact-input__name" type="text" placeholder="Name">
                         <input class="header__contact-input__email" type="email" placeholder="Email">
                         <textarea class="header__contact-textarea" placeholder="Message"></textarea>
-                        <button class="header__contact-btn" type="submit">Message</button>
+                        <button class="header__contact-btn" type="submit">Notify Me</button>
                     </form>
                 </div>
                 <div class="header__bottom">
