--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
                             </span>
                         </li>
                         <li class="header__top-item">
-                            <a class="header__top-link" href="#">
+                            <a class="header__top-link" href="contact.html">
                                 Contact Us.
                             </a>
                         </li>
@@ -33,7 +33,7 @@
                     </h2>
                     <p class="header__content-name">TTDLAL App!</p>
                     <p class="header__content-subtitle">
-                        Get notified when it’s ready
+                        Get notified <span>when it’s ready</span>
                     </p>
                     <form class="header__content-form" action="#">
                         <input class="header__content-input" type="text" placeholder="Enter your e-mail address">
